[package]
name = "press"
version = "0.1.0"
authors = ["Jared Rodriguez <jared.rodriguez@rackspace.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
crc = "1.8"
log = "0.4"
env_logger = "0.6"

[target.x86_64-unknown-linux-gnu.dependencies]
libudev = "0.2"
